--- a/package.json
+++ b/package.json
@@ -10,22 +10,33 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@react-email/components": "^0.0.19",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.4",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
+    "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "resend": "^3.2.0",
     "tsparticles-engine": "^2.12.0",
-    "tsparticles-slim": "^2.12.0"
+    "tsparticles-slim": "^2.12.0",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8",
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.4.2",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
