--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-email": "^2.1.4",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-scroll": "^1.9.0",
+    "react-spinners": "^0.14.1",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0",
