set up send mail using Email JS

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 RESEND_API_KEY=re_Ymrmk3QA_D76g4FbyAHkQMQLjmCfZyTgi
+NEXT_PUBLIC_EMAIL_JS_SERVICE_ID=service_uwldr2l
+NEXT_PUBLIC_EMAIL_JS_TEMPLATE_ID=template_qxyp10b
+NEXT_PUBLIC_EMAIL_JS_PUBLIC_KEY=gtNm8x0PsH3p3ORG5
