--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.1.3",
     "@react-email/components": "^0.0.19",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
+    "emailjs": "^4.0.3",
     "next": "14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
@@ -23,6 +25,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-scroll": "^1.9.0",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0",
